# shirt-inventory-python

./: .gitignore  README.md  pyproject.toml  setup.sh  setup_venv.sh  tox.ini
.devcontainer/: devcontainer.json
_del/: _del.json
lambda_handlers/crud/dal/: repository.py
lambda_handlers/crud/dal/schemas/: item_schema.py
lambda_handlers/crud/handlers/: create_handler.py  get_handler.py
lambda_handlers/crud/handlers/schemas/: constants.py  input.py  output.py
lambda_handlers/crud/handlers/utils/: exceptions.py  responses.py
tests/integration/: test_apis.py  test_apis_with_sort.py  test_data.json  test_utils.py
tests/unit/: test_dal_schemas.py  test_handler_schemas.py
